# qaguru_python_diplom

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml  pytest.ini
demoqa/data/: constant.py
demoqa/model/controls/: chekboxes.py  dropdown.py  radio_button.py  select_dates_on_the_calendar.py  style_button.py
demoqa/model/pages/: practice_form.py
demoqa/utils/: attach.py  base_session.py  generatore_date.py  resource.py
framework/: DemoQaWithEnv.py
tests/: conftest.py  test_for_registration_form.py
ui/tests/: conftest.py  test_for_registration_form.py
